--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "beamer-pen",
+  "name": "sketch-beamer",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,7 +22,10 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@emmetio/codemirror-plugin": "^0.3.5",
+    "codemirror": "^5.32.0",
     "core-js": "^2.4.1",
+    "ng2-codemirror": "^1.1.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
