--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sketch-beamer",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -11,7 +11,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
@@ -24,7 +24,7 @@
     "@angular/router": "^5.0.0",
     "@emmetio/codemirror-plugin": "^0.3.5",
     "codemirror": "^5.32.0",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.3",
     "ng2-codemirror": "^1.1.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
@@ -35,7 +35,7 @@
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.93",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
