--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emmetio/codemirror-plugin": "^0.3.5",
     "codemirror": "^5.32.0",
     "core-js": "^2.5.3",
+    "ng-packagr": "^1.6.0",
     "ng2-codemirror": "^1.1.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
@@ -36,6 +37,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.93",
+    "angular-cli-ghpages": "^0.5.2",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
