--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "package": "ng-packagr -p ng-package.json"
   },
   "private": false,
   "dependencies": {
